--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "devDependencies": {
     "@sveltejs/adapter-auto": "^2.0.0",
+    "@sveltejs/adapter-netlify": "^2.0.5",
     "@sveltejs/app": "^0.0.7",
     "@sveltejs/kit": "^1.10.0",
     "autoprefixer": "^10.4.7",
