--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
   "dependencies": {
     "@popperjs/core": "^2.11.6",
     "classnames": "^2.3.2",
+    "dotenv": "^16.0.3",
+    "emailjs-com": "^3.2.0",
     "flowbite": "^1.6.3",
     "flowbite-svelte": "^0.30.6",
     "svelte-pdf": "^1.0.16"
