--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch"
   },
   "devDependencies": {
+    "@smui/button": "^7.0.0-beta.0",
+    "@smui/card": "^7.0.0-beta.0",
     "@sveltejs/adapter-auto": "^2.0.0",
     "@sveltejs/adapter-netlify": "^2.0.5",
     "@sveltejs/app": "^0.0.7",
@@ -18,6 +20,7 @@
     "pdfjs-dist": "^3.4.120",
     "postcss": "^8.4.14",
     "postcss-load-config": "^4.0.1",
+    "smui-theme": "^7.0.0-beta.0",
     "svelte": "^3.54.0",
     "svelte-check": "^3.0.1",
     "svelte-preprocess": "^4.10.7",
@@ -34,6 +37,7 @@
     "emailjs-com": "^3.2.0",
     "flowbite": "^1.6.3",
     "flowbite-svelte": "^0.30.6",
+    "svelte-grid": "^5.1.1",
     "svelte-pdf": "^1.0.16"
   }
 }
